[package]
name = "rustomorin-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp = "0.20.0"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
